--- a/.env
+++ b/.env
@@ -35,14 +35,16 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=motiur.cmt@gmail.com
-MAIL_PASSWORD=kagdqhaydplhambn
+MAIL_USERNAME=puneclubbangladesh@gmail.com
+MAIL_PASSWORD=nsutlqdpuwjvhyeq
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="info@puneclub.com"
 MAIL_FROM_NAME="${APP_NAME}"
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
