--- a/.env
+++ b/.env
@@ -39,12 +39,11 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=puneclubbangladesh@gmail.com
-MAIL_PASSWORD=nsutlqdpuwjvhyeq
+MAIL_USERNAME=trendytech.cmt@gmail.com
+MAIL_PASSWORD=pursvwpoehcpbqiq
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="info@puneclub.com"
-MAIL_FROM_NAME="${APP_NAME}"
-
+MAIL_FROM_ADDRESS="info@galf.com"
+  
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
