--- a/.env
+++ b/.env
@@ -18,7 +18,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=gulf_erp
+DB_DATABASE=web_iconerp
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -40,10 +40,10 @@ MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=trendytech.cmt@gmail.com
-MAIL_PASSWORD=hgzdqwhnhpjqktdl
+MAIL_PASSWORD=tgbepjktnziwnbhx
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="info@galf.com"
-  
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
